# groep-ta-2020-2021-elias-eliza-gayane-mohamed

./: .gitignore  CMakeLists.txt  DFA_elias.cpp  DFA_elias.h  ENFA_elias.cpp  ENFA_elias.h  HTML.cpp  HTML.h  NFA_elias.cpp  NFA_elias.h  Parser.cpp  Parser.h  Python.cpp  Python.h  RE_elias.cpp  RE_elias.h  Safe.cpp  Safe.h  engine.cpp
automata/: DFA_elias.cpp  DFA_elias.h  DFA_eliza.cpp  DFA_eliza.h  ENFA_elias.cpp  ENFA_elias.h  NFA_elias.cpp  NFA_elias.h  RE_elias.h
automata/automata_elias/: DFA.cpp  DFA.h  DFA_elias.cpp  DFA_elias.h  ENFA_elias.cpp  ENFA_elias.h  NFA_elias.cpp  NFA_elias.h  RE_elias.cpp  RE_elias.h
automata/automata_eliza/: DFA_eliza.cpp  DFA_eliza.h
automata/wrappers/: wrapper_DFA.cpp  wrapper_DFA.h  wrapper_ENFA.cpp  wrapper_ENFA.h  wrapper_NFA.cpp  wrapper_NFA.h  wrapper_RE.cpp  wrapper_RE.h
input/: python2.txt
input/NFA/: False_NFA.json  True_NFA.json  abs_all_any_apppend_ascii_NFA.json  as_NFA.json  ascii_NFA.json  bool_NFA.json  char_quotes_NFA.json  chr_NFA.json  chr_clear_copy_count_NFA.json  comments_NFA.json  def_NFA.json  dict_NFA.json  else_elif_NFA.json  eval_exec_extend_NFA.json  float_NFA.json  for_NFA.json  for_from_NFA.json  getallen_NFA.json  hash_help_hex_NFA.json  id_input_int_index_insert_isinstance_iter_NFA.json  if_in_import_NFA.json  int_NFA.json  list_len_NFA.json  (+16 more)
output/: file.css  hallo.html  input_test.html  input_test2.html  project.html  pyhton3.html  python1.html  python2.html  python3.html  python4.html  python5.html  python6.html  python7.html  python8.html  python_code_1.html  python_code_2.html  test.html
(+9 files in other folders)
